add ignore and update strategy in docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       --logfile /freqtrade/user_data/logs/freqtrade.log
       --db-url sqlite:////freqtrade/user_data/tradesv3.sqlite
       --config /freqtrade/user_data/config.json
-      --strategy HPStrategyTF
+      --strategy HPStrategyTFJPAConfirmV3
 
   freqtrade_bt:
     image: freqtradeorg/freqtrade:develop
