--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 /user_data/config.json
+/user_data/config_static.json
 /user_data/data
 /user_data/logs
 /user_data/*.sqlite*
+/user_data/backtest_results
