--- a/user_data/config.json.example
+++ b/user_data/config.json.example
@@ -1,12 +1,12 @@
 {
-    "max_open_trades": 200,
+    "max_open_trades": 35,
     "amend_last_stake_amount": true,
     "stake_currency": "USDT",
     "stake_amount": "unlimited",
     "tradable_balance_ratio": 1,
     "fiat_display_currency": "USD",
     "timeframe": "5m",
-    "dry_run": true,
+    "dry_run": false,
     "dry_run_wallet": 1000,
     "cancel_open_orders_on_exit": false,
     "trading_mode": "spot",
@@ -40,10 +40,10 @@
         "ccxt_config": {
             "enableRateLimit": true,
             "timeout": 60000,
-            "urls": {
+            "_urls": {
                 "api": {
-                    "public": "http://proxy_bt:8080/kucoin",
-                    "private": "http://proxy_bt:8080/kucoin"
+                    "public": "http://proxy_real:8080/kucoin",
+                    "private": "http://proxy_real:8080/kucoin"
                 }
             }
         },
@@ -51,40 +51,74 @@
             "enableRateLimit": true,
             "timeout": 60000
         },
-        "pair_whitelist":
-           ["ETH/USDT", "BTC/USDT", "SOL/USDT", "ADA/USDT", "AVAX/USDT",
- "XRP/USDT", "DOGE/USDT", "LINK/USDT", "FTM/USDT", "MATIC/USDT",
- "DOT/USDT", "ALGO/USDT", "INJ/USDT", "BNB/USDT", "ATOM/USDT",
-     "ICP/USDT", "VRA/USDT", "SHIB/USDT", "FLR/USDT", "KAS/USDT",
- "LTC/USDT", "IMX/USDT", "ARB/USDT", "PYTH/USDT", "XMR/USDT",
- "RUNE/USDT", "HBAR/USDT", "AGIX/USDT", "NEAR/USDT", "FET/USDT",
- "DYDX/USDT", "TOMI/USDT", "RNDR/USDT", "SUI/USDT", "GALAX/USDT",
- "EGLD/USDT", "FTT/USDT", "FIL/USDT", "XLM/USDT", "PYR/USDT",
- "UNI/USDT", "NAKA/USDT", "TRX/USDT", "QNT/USDT", "AAVE/USDT",
- "CRO/USDT", "APE/USDT", "APT/USDT", "BCH/USDT", "BLUR/USDT"],
-      "pair_blacklist": []
+        "pair_whitelist": [
+            "AVAX/USDT",
+            "METIS/USDT",
+            "KDA/USDT",
+            "INJ/USDT",
+            "ORDI/USDT",
+            "ATOM/USDT",
+            "LDO/USDT",
+            "GHX/USDT",
+            "FET/USDT",
+            "OP/USDT",
+            "BNB/USDT",
+            "LUNC/USDT",
+            "AGIX/USDT",
+            "RUNE/USDT",
+            "DOGE/USDT",
+            "STX/USDT",
+            "PEOPLE/USDT",
+            "GMT/USDT",
+            "VRA/USDT",
+            "SUI/USDT",
+            "ETH/USDT",
+            "HBAR/USDT",
+            "FIL/USDT",
+            "ADA/USDT",
+            "TRB/USDT",
+            "SOL/USDT",
+            "MASK/USDT",
+            "DOT/USDT",
+            "LTC/USDT",
+            "BTC/USDT",
+            "PEPE/USDT",
+            "AKT/USDT",
+            "NAKA/USDT",
+            "MATIC/USDT",
+            "SHIB/USDT",
+            "LINK/USDT",
+            "XRP/USDT",
+            "ARB/USDT",
+            "TOMI/USDT",
+            "CFX/USDT",
+            "FTM/USDT",
+            "XMR/USDT",
+            "KAS/USDT",
+            "VELO/USDT",
+            "RNDR/USDT"
+        ],
+        "pair_blacklist": [
+            "NEAR/USDT",
+            "KONO/USDT",
+            "TRIAS/USDT",
+            "BSV/USDT",
+            "MYRO/USDT",
+            "COQ/USDT",
+            "ICP/USDT",
+            "BONK/USDT",
+            "RATS/USDT",
+            "MAPS/USDT",
+            "USDC/USDT",
+            "BIIS/USDT",
+            "SEI/USDT",
+            "ROSE/USDT"
+        ]
     },
-    "_pairlists": [
-        {
-            "method": "VolumePairList",
-            "number_assets": 50,
-            "sort_key": "quoteVolume",
-            "min_value": 500000,
-            "refresh_period": 1800,
-            "lookback_timeframe": "1m"
-          },
-          {
-            "method": "PriceFilter",
-            "max_price": 10
-          }
-    ],
     "pairlists": [
         {
             "method": "StaticPairList",
-            "number_assets": 100,
-            "sort_key": "quoteVolume",
-            "min_value": 0,
-            "refresh_period": 1800
+            "number_assets": 45
         }
     ],
     "api_server": {
