--- a/config.json
+++ b/config.json
@@ -46,7 +46,22 @@
             "enableRateLimit": true,
             "timeout": 10000
         },
-    "pair_whitelist": ["WLD/USDT:USDT", "AXL/USDT:USDT", "NTRN/USDT:USDT", "FLR/USDT:USDT", "1000LUNC/USDT:USDT", "FITFI/USDT:USDT", "1000FLOKI/USDT:USDT", "BEAM/USDT:USDT", "RNDR/USDT:USDT", "CHZ/USDT:USDT", "ASTR/USDT:USDT", "AGI/USDT:USDT", "INJ/USDT:USDT", "HIGH/USDT:USDT", "10000SATS/USDT:USDT", "FUN/USDT:USDT", "ACE/USDT:USDT", "STX/USDT:USDT", "KAS/USDT:USDT", "BLUR/USDT:USDT", "FTM/USDT:USDT", "KDA/USDT:USDT", "QI/USDT:USDT", "BLZ/USDT:USDT", "BSV/USDT:USDT", "PEOPLE/USDT:USDT", "SKL/USDT:USDT", "ONT/USDT:USDT", "NEO/USDT:USDT", "WAVES/USDT:USDT"]
+    "pair_whitelist": [
+        "BTC/USDT:USDT",
+        "BCH/USDT:USDT",
+        "ETH/USDT:USDT",
+        "LINK/USDT:USDT",
+        "LTC/USDT:USDT",
+        "SOL/USDT:USDT",
+        "BNB/USDT:USDT",
+        "XRP/USDT:USDT",
+        "ADA/USDT:USDT",
+        "DOT/USDT:USDT",
+        "ETC/USDT:USDT",
+        "ALGO/USDT:USDT",
+        "CYBER/USDT:USDT",
+        "PYTH/USDT:USDT"
+    ]
     },
     "pairlists": [
         {
